# flatcraft

./: .clang-format  CMakeLists.txt  TODO.md
libs/vec/: CMakeLists.txt
libs/vec/include/vec/: vec.h
libs/vec/src/: vec.c
src/: block.c  block.cpp  block.h  block.hpp  chunk.c  chunk.cpp  chunk.h  chunk.hpp  event.c  event.cpp  event.h  event.hpp  main.c  main.cpp  player.cpp  player.h  player.hpp  render.c  render.cpp  render.h  render.hpp  state.c  state.cpp  state.h  state.hpp  types.h  util.c  util.cpp  util.h  util.hpp
